--- a/openatlas/templates/object/insert.html
+++ b/openatlas/templates/object/insert.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('object')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('object'), 'object_index'], '+ ' + g.classes['E84'].name]|crumb }}
 {% endblock %}
