--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('place')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('place')]|crumb }}
 {% endblock %}
