--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('profile')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('profile'), 'profile_index'], _('change password')]|crumb }}
 {% endblock %}
