--- a/openatlas/templates/reference/link-update.html
+++ b/openatlas/templates/reference/link-update.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('reference')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_(origin.view_name), origin.view_name + '_index'], origin, linked_object, _(edit)]|crumb }}
 {% endblock %}
