--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - SQL{% endblock %}
 {% block breadcrumb %}
     {{ [[_('admin'), 'admin_index'], 'SQL']|crumb }}
 {% endblock %}
