--- a/openatlas/templates/types/insert.html
+++ b/openatlas/templates/types/insert.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('types')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('types'), 'node_index'], root, '+']|crumb }}
 {% endblock %}
