--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('content')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('admin'), 'admin_index'],
         [_('content'), 'content_index'],
