--- a/openatlas/templates/import/project_view.html
+++ b/openatlas/templates/import/project_view.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('import')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project.name]|crumb }}
 {% endblock %}
