--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('import')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('overview'), 'index'], _('changelog')]|crumb }}
 {% endblock %}
