--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('login')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('overview'), 'index'], _('login')]|crumb }}
 {% endblock %}
