--- a/openatlas/templates/member/insert.html
+++ b/openatlas/templates/member/insert.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('member')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('actor'), 'actor_index'], origin, '+' + _('member'.capitalize())]|crumb }}
+    {{ [[_('actor'), 'actor_index'], origin, '+' + _('member')|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
     {{ form|display_form }}
