--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('model')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('model')]|crumb }}
 {% endblock %}
