--- a/openatlas/templates/note/insert.html
+++ b/openatlas/templates/note/insert.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('note')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_(entity.view_name), entity.view_name + '_index'], entity, '+ ' + _('note').capitalize()]|crumb }}
+    {{ [[_(entity.view_name), entity.view_name + '_index'], entity, '+ ' + _('note')|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
     {{ form|display_form }}
