--- a/openatlas/templates/note/update.html
+++ b/openatlas/templates/note/update.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('note')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_(entity.view_name), entity.view_name + '_index'], entity, _('edit note')]|crumb }}
 {% endblock %}
