--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('object')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('object')]|crumb }}
 {% endblock %}
