--- a/openatlas/templates/object/update.html
+++ b/openatlas/templates/object/update.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ object_.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('object'), 'object_index'], object_, _('edit')]|crumb }}
 {% endblock %}
