--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('place')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {% if origin %}
         {{ [[origin.view_name, origin.view_name + '_index'],
@@ -6,9 +7,9 @@
             structure['feature'],
             structure['stratigraphic_unit'],
             origin,
-            '+ ' + _(title).capitalize()]|crumb }}
+            '+ ' + _(title)|uc_first]|crumb }}
     {% else %}
-        {{ [[_('place'), 'place_index'], '+ ' + _(title).capitalize()]|crumb }}
+        {{ [[_('place'), 'place_index'], '+ ' + _(title)|uc_first]|crumb }}
     {% endif %}
 {% endblock %}
 {% block content %}
