--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('profile')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('profile')]|crumb }}
 {% endblock %}
