--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('reference')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('reference'), 'reference_index'], reference, _('add')]|crumb }}
 {% endblock %}
