--- a/openatlas/templates/reference/insert.html
+++ b/openatlas/templates/reference/insert.html
@@ -1,9 +1,10 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('reference')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {% if origin %}
-        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _(code).capitalize()]|crumb }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _(code)|uc_first]|crumb }}
     {% else %}
-        {{ [[_('reference'), 'reference_index'], '+ ' + _(code).capitalize()]|crumb }}
+        {{ [[_('reference'), 'reference_index'], '+ ' + _(code)|uc_first]|crumb }}
     {% endif %}
 {% endblock %}
 {% block content %}
