--- a/openatlas/templates/relation/update.html
+++ b/openatlas/templates/relation/update.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('relation')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('actor'), 'actor_index'], origin, related, _('edit')]|crumb }}
 {% endblock %}
