--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('search')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('overview'), 'index'], _('search')]|crumb }}
 {% endblock %}
