--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -2,9 +2,9 @@
 {% block title_name %} - {{ _('source')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {% if origin %}
-        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _('source').capitalize()]|crumb }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _('source')|uc_first]|crumb }}
     {% else %}
-        {{ [[_('source'), 'source_index'], '+ ' + _('source').capitalize()]|crumb }}
+        {{ [[_('source'), 'source_index'], '+ ' + _('source')|uc_first]|crumb }}
     {% endif %}
 {% endblock %}
 {% block content %}
