--- a/openatlas/templates/translation/update.html
+++ b/openatlas/templates/translation/update.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ translation.name }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('source'), 'source_index'], source, translation, _('edit')]|crumb }}
 {% endblock %}
