Moved Daniel to contributors

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -70,15 +70,12 @@
         )|nl2br|safe }}
 
         <h2>{{ _('team')|uc_first }}</h2>
-        <p>
-            <strong>Stefan Eichert</strong> - Idea, Concept and Data Modelling<br>
-            <strong>Alexander Watzinger</strong> - Lead Developer and Concept<br>
-            <strong>Bernhard Koschicek</strong> - Software Development<br>
-            <strong>Christoph Hoffmann</strong> - Frontend Development<br>
-            <strong>Veronika Gründhammer</strong> - Project Administration<br>
-            <strong>Jan Belik</strong> - Logo Design and Design Consulting<br>
-            <strong>Daniel Kittel</strong> - Quality Assurance
-        </p>
+        <p>Stefan Eichert - Idea, concept and data modelling</p>
+        <p>Alexander Watzinger - Lead developer and concept</p>
+        <p>Bernhard Koschicek - Software development</p>
+        <p>Christoph Hoffmann - Frontend development</p>
+        <p>Veronika Gründhammer - Project administration</p>
+        <p>Jan Belik - Logo design and design consulting</p>
 
         <h2>Contributors</h2>
         <p>These people supported us in many ways, our thanks goes to all of them.</p>
@@ -86,6 +83,7 @@
             Asil Çetin<br>
             Christof Rauchenberger<br>
             Dalibor Pančić<br>
+            Daniel Kittel<br>
             Johannes Preiser-Kapeller<br>
             Judith Pucher<br>
             Katharina Winckler<br>
