Making profile form functions more generic

--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -13,19 +13,19 @@
             <h1>{{ _('general')|uc_first }}</h1>
             <div class="data-table">
                 <div class="table-row">
-                    <div>{{ form.name.label|safe }} {{ form.name.description|display_tooltip|safe }}</div>
+                    <div>{{ form.name.label }} {{ form.name.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.name }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.email.label|safe }}  {{ form.email.description|display_tooltip|safe }}</div>
+                    <div>{{ form.email.label }} {{ form.email.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.email }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.show_email.label|safe }}  {{ form.show_email.description|display_tooltip|safe }}</div>
+                    <div>{{ form.show_email.label }} {{ form.show_email.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.show_email }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.newsletter.label|safe }}  {{ form.newsletter.description|display_tooltip|safe }}</div>
+                    <div>{{ form.newsletter.label }} {{ form.newsletter.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.newsletter }}</div>
                 </div>
             </div>
@@ -34,27 +34,27 @@
             <h1>{{ _('display')|uc_first }}</h1>
             <div class="data-table">
                 <div class="table-row">
-                    <div>{{ form.language.label|safe }} {{ form.language.description|display_tooltip|safe }}</div>
+                    <div>{{ form.language.label }} {{ form.language.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.language }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.table_rows.label|safe }}  {{ form.table_rows.description|display_tooltip|safe }}</div>
+                    <div>{{ form.table_rows.label }} {{ form.table_rows.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.table_rows }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.table_show_aliases.label|safe }}  {{ form.table_show_aliases.description|display_tooltip|safe }}</div>
+                    <div>{{ form.table_show_aliases.label }} {{ form.table_show_aliases.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.table_show_aliases }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.layout.label|safe }}  {{ form.layout.description|display_tooltip|safe }}</div>
+                    <div>{{ form.layout.label }} {{ form.layout.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.layout }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.max_zoom.label|safe }} {{ form.max_zoom.description|display_tooltip|safe }}</div>
+                    <div>{{ form.max_zoom.label }} {{ form.max_zoom.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.max_zoom(class_='integer') }}</div>
                 </div>
                 <div class="table-row">
-                    <div>{{ form.default_zoom.label|safe }} {{ form.default_zoom.description|display_tooltip|safe }}</div>
+                    <div>{{ form.default_zoom.label }} {{ form.default_zoom.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.default_zoom(class_='integer') }}</div>
                 </div>
             </div>
@@ -64,15 +64,15 @@
                 <h1>{{ _('modules')|uc_first }}</h1>
                 <div class="data-table">
                     <div class="table-row">
-                        <div>{{ form.module_geonames.label|safe }}  {{ form.module_geonames.description|display_tooltip|safe }}</div>
+                        <div>{{ form.module_geonames.label }} {{ form.module_geonames.description|display_tooltip|safe }}</div>
                         <div class="table-cell">{{ form.module_geonames }}</div>
                     </div>
                     <div class="table-row">
-                        <div>{{ form.module_map_overlay.label|safe }}  {{ form.module_map_overlay.description|display_tooltip|safe }}</div>
+                        <div>{{ form.module_map_overlay.label }} {{ form.module_map_overlay.description|display_tooltip|safe }}</div>
                         <div class="table-cell">{{ form.module_map_overlay }}</div>
                     </div>
                     <div class="table-row">
-                        <div>{{ form.module_notes.label|safe }}  {{ form.module_notes.description|display_tooltip|safe }}</div>
+                        <div>{{ form.module_notes.label }} {{ form.module_notes.description|display_tooltip|safe }}</div>
                         <div class="table-cell">{{ form.module_notes }}</div>
                     </div>
                 </div>
