--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -11,18 +11,12 @@
             {{ _('change password')|button(url_for('profile_password')) }}
         </div>
     {% endif %}
-    <div style="float:left;">
-        <h1>{{ _('general')|uc_first }}</h1>
-        {{ data['info']|display_info }}
-    </div>
-    <div style="float:left;margin-left:2em;">
-        <h1>{{ _('display')|uc_first }}</h1>
-        {{ data['display']|display_info }}
-    </div>
-    {% if 'contributor'|is_authorized %}
-        <div style="float:left;margin-left:2em;">
-            <h1>{{ _('modules')|uc_first }}</h1>
-            {{ data['modules']|display_info }}
-        </div>
-    {% endif %}
+    {% for category in ['general', 'display', 'modules'] %}
+        {% if category != 'modules' or 'contributor'|is_authorized %}
+            <div style="float:left;margin-right: 2em;">
+                <h1>{{ _(category)|uc_first }}</h1>
+                {{ data[category]|display_info }}
+            </div>
+        {% endif %}
+    {% endfor %}
 {% endblock %}
