--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -9,77 +9,20 @@
     </div>
     <form method="post">
         {{ form.csrf_token }}
-        <div style="float:left;margin-right:2em;">
-            <h1>{{ _('general')|uc_first }}</h1>
-            <div class="data-table">
-                <div class="table-row">
-                    <div>{{ form.name.label }} {{ form.name.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.name }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.email.label }} {{ form.email.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.email }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.show_email.label }} {{ form.show_email.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.show_email }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.newsletter.label }} {{ form.newsletter.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.newsletter }}</div>
-                </div>
-            </div>
-        </div>
-        <div style="float:left;margin-right:2em;">
-            <h1>{{ _('display')|uc_first }}</h1>
-            <div class="data-table">
-                <div class="table-row">
-                    <div>{{ form.language.label }} {{ form.language.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.language }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.table_rows.label }} {{ form.table_rows.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.table_rows }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.table_show_aliases.label }} {{ form.table_show_aliases.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.table_show_aliases }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.layout.label }} {{ form.layout.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.layout }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.max_zoom.label }} {{ form.max_zoom.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.max_zoom(class_='integer') }}</div>
-                </div>
-                <div class="table-row">
-                    <div>{{ form.default_zoom.label }} {{ form.default_zoom.description|display_tooltip|safe }}</div>
-                    <div class="table-cell">{{ form.default_zoom(class_='integer') }}</div>
-                </div>
-            </div>
-        </div>
-        {% if 'contributor'|is_authorized %}
-            <div style="float:left;">
-                <h1>{{ _('modules')|uc_first }}</h1>
+        {% for category, fields in form_fields.items() %}
+            <div style="float:left;margin-right:2em;">
+                <h1>{{ category|uc_first }}</h1>
                 <div class="data-table">
-                    <div class="table-row">
-                        <div>{{ form.module_geonames.label }} {{ form.module_geonames.description|display_tooltip|safe }}</div>
-                        <div class="table-cell">{{ form.module_geonames }}</div>
-                    </div>
-                    <div class="table-row">
-                        <div>{{ form.module_map_overlay.label }} {{ form.module_map_overlay.description|display_tooltip|safe }}</div>
-                        <div class="table-cell">{{ form.module_map_overlay }}</div>
-                    </div>
-                    <div class="table-row">
-                        <div>{{ form.module_notes.label }} {{ form.module_notes.description|display_tooltip|safe }}</div>
-                        <div class="table-cell">{{ form.module_notes }}</div>
-                    </div>
+                    {% for field in fields %}
+                        <div class="table-row">
+                            <div>{{ field.label }} {{ field.description|display_tooltip|safe }}</div>
+                            <div class="table-cell">{{ field }}</div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
-        {% endif %}
+        {% endfor %}
         <div style="clear:both"></div>
         {{ form.save(class=config['CSS']['button']['primary']) }}
     </form>
-
 {% endblock %}
