--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -4,18 +4,38 @@
     {{ [_('admin')]|crumb }}
 {% endblock %}
 {% block content %}
-    <div id="admin_index">
-        {% for dir, value in writeable_dirs.items() %}
-            {% if not value %}
-                <span class="error">{{ _('directory not writable')|uc_first }}: {{ dir }}</span><br>
-            {% endif %}
-        {% endfor %}
-        <h1>{{ _('user')|uc_first }}</h1>
-        <a href="{{ url_for('user_index') }}">{{ _('list')|uc_first }}</a>
-        {% if 'manager'|is_authorized and session['settings']['mail'] %}
-            <a href="{{ url_for('admin_newsletter') }}">{{ _('newsletter')|uc_first }}</a>
-        {% endif %}
+{% for dir, value in writeable_dirs.items() %}
+    {% if not value %}
+        <span class="error">{{ _('directory not writable')|uc_first }}: {{ dir }}</span><br>
+    {% endif %}
+{% endfor %}
+<div class="row">
+    <div class="col-6">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-user">{{ _('user')|uc_first }}</a></li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+                <div class="toolbar">
+                    {{ 'User'|manual_link }}
+                    {{ _('activity')|button(url_for('user_activity')) }}
+                    {% if 'manager'|is_authorized and session['settings']['mail'] %}
+                        {{ _('user')|button(url_for('user_insert')) }}
+                    {% endif %}
+                    {% if 'manager'|is_authorized and session['settings']['mail'] %}
+                        {{ _('newsletter')|button(url_for('admin_newsletter')) }}
+                    {% endif %}
+                </div>
+                <div>
+                    {{ table.display()|safe }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+
+    <div id="admin_index">
         <h1>{{ _('files')|uc_first }}</h1>
         <a href="{{ url_for('file_index') }}">{{ _('list')|uc_first }}</a>
         {% if 'manager'|is_authorized %}
@@ -36,7 +56,6 @@
         {% endif %}
 
         <h1>{{ _('logs')|uc_first }}</h1>
-        <a href="{{ url_for('user_activity') }}">{{ _('activity')|uc_first }}</a>
         {% if 'admin'|is_authorized %}
             <a href="{{ url_for('admin_log') }}">{{ _('system log')|uc_first }}</a>
         {% endif %}
