--- a/openatlas/templates/user/activity.html
+++ b/openatlas/templates/user/activity.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('user')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], [_('user'), 'user_index'], _('activity')]|crumb }}
+    {{ [[_('admin'), 'admin_index'], _('activity')]|crumb }}
 {% endblock %}
 {% block content %}
     {{ form|display_form }}
