--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -4,24 +4,30 @@
     {{ [_('admin')]|crumb }}
 {% endblock %}
 {% block content %}
-{% for dir, value in writeable_dirs.items() %}
-    {% if not value %}
-        <span class="error">{{ _('directory not writable')|uc_first }}: {{ dir }}</span><br>
-    {% endif %}
-{% endfor %}
 <div class="row">
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-user">{{ _('user')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-general">{{ _('general')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-user">{{ _('user')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-files">{{ _('files')|uc_first }}</a></li>
         </ul>
         <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-general">
+                <div class="toolbar">
+                </div>
+                <div>
+                    {% if 'admin'|is_authorized %}
+                        <a href="{{ url_for('admin_general') }}">{{ _('general')|uc_first }}</a>
+                    {% endif  %}
+                </div>
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="tab-user">
                 <div class="toolbar">
                     {{ 'User'|manual_link }}
-                    {{ _('activity')|button(url_for('user_activity')) }}
                     {% if 'manager'|is_authorized and session['settings']['mail'] %}
                         {{ _('user')|button(url_for('user_insert')) }}
                     {% endif %}
+                    {{ _('activity')|button(url_for('user_activity')) }}
                     {% if 'manager'|is_authorized and session['settings']['mail'] %}
                         {{ _('newsletter')|button(url_for('admin_newsletter')) }}
                     {% endif %}
@@ -30,23 +36,45 @@
                     {{ table.display()|safe }}
                 </div>
             </div>
+            <div class="tab-pane fade" role="tabpanel" id="tab-files">
+                <div class="toolbar">
+                    {{ 'Files'|manual_link }}
+                    {{ _('file')|button(url_for('file_insert')) }}
+                    {{ _('list')|button(url_for('file_index')) }}
+                </div>
+                {% for dir, value in writeable_dirs.items() %}
+                    {% if not value %}
+                        <p>
+                            <span class="error">{{ _('directory not writable')|uc_first }}: {{ dir }}</span>
+                        </p>
+                    {% endif %}
+                {% endfor %}
+                {% if disk_space_info %}
+                    <div id="disk-size"></div>
+                    <p>
+                        {{ _('total disk space')|uc_first }} <strong>{{ disk_space_info.total }}</strong> -
+                        {{ _('free disk space')|uc_first }} <strong>{{ disk_space_info.free }}</strong>
+                    </p>
+                    <script>
+                        $( function() {
+                            $("#disk-size").progressbar({value: {{ disk_space_info.percent }} });
+                        });
+                    </script>
+                {% endif %}
+                <div>
+                    {{ file_settings|display_info }}
+                    {% if 'manager'|is_authorized %}
+                        {{  _('edit')|button(url_for('admin_file')) }}
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
 
     <div id="admin_index">
-        <h1>{{ _('files')|uc_first }}</h1>
-        <a href="{{ url_for('file_index') }}">{{ _('list')|uc_first }}</a>
-        {% if 'manager'|is_authorized %}
-            <a href="{{ url_for('admin_file') }}">{{ _('settings')|uc_first }}</a>
-        {% endif %}
-
-        {% if 'manager'|is_authorized %}
-            <h1>{{ _('settings')|uc_first }}</h1>
-        {% endif %}
         {% if 'admin'|is_authorized %}
-            <a href="{{ url_for('admin_general') }}">{{ _('general')|uc_first }}</a>
             <a href="{{ url_for('admin_mail') }}">{{ _('mail')|uc_first }}</a>
         {% endif  %}
         {% if 'manager'|is_authorized %}
@@ -54,7 +82,6 @@
             <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
             <a href="{{ url_for('admin_logo') }}">{{ _('logo')|uc_first }}</a>
         {% endif %}
-
         <h1>{{ _('logs')|uc_first }}</h1>
         {% if 'admin'|is_authorized %}
             <a href="{{ url_for('admin_log') }}">{{ _('system log')|uc_first }}</a>
