--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -14,10 +14,14 @@
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-general">
                 <div class="toolbar">
+                    {{ 'General'|manual_link }}
                 </div>
                 <div>
+                    {{ general_settings|display_info }}
                     {% if 'admin'|is_authorized %}
-                        <a href="{{ url_for('admin_general') }}">{{ _('general')|uc_first }}</a>
+                        <div class="toolbar">
+                            {{ _('edit')|button(url_for('admin_general')) }}
+                        </div>
                     {% endif  %}
                 </div>
             </div>
@@ -64,7 +68,9 @@
                 <div>
                     {{ file_settings|display_info }}
                     {% if 'manager'|is_authorized %}
-                        {{  _('edit')|button(url_for('admin_file')) }}
+                        <div class="toolbar">
+                            {{  _('edit')|button(url_for('admin_file')) }}
+                        </div>
                     {% endif %}
                 </div>
             </div>
@@ -73,7 +79,7 @@
 </div>
 
 
-    <div id="admin_index">
+    <div id="admin_index" style="margin-top:2em;">
         {% if 'admin'|is_authorized %}
             <a href="{{ url_for('admin_mail') }}">{{ _('mail')|uc_first }}</a>
         {% endif  %}
