--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -15,15 +15,25 @@
             <div class="tab-pane fade show active" role="tabpanel" id="tab-general">
                 <div class="toolbar">
                     {{ 'General'|manual_link }}
+                    {% if 'admin'|is_authorized %}
+                        {{ _('edit settings')|button(url_for('admin_general')) }}
+                    {% endif  %}
                 </div>
                 <div>
                     {{ settings.general|display_info }}
-                    {% if 'admin'|is_authorized %}
-                        <div class="toolbar">
-                            {{ _('edit')|button(url_for('admin_general')) }}
-                        </div>
-                    {% endif  %}
                 </div>
+                {% if disk_space_info %}
+                    <div id="disk-size"></div>
+                    <p>
+                        {{ _('total disk space')|uc_first }} <strong>{{ disk_space_info.total }}</strong> -
+                        {{ _('free disk space')|uc_first }} <strong>{{ disk_space_info.free }}</strong>
+                    </p>
+                    <script>
+                        $( function() {
+                            $("#disk-size").progressbar({value: {{ disk_space_info.percent }} });
+                        });
+                    </script>
+                {% endif %}
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-user">
                 <div class="toolbar">
@@ -45,6 +55,9 @@
                     {{ 'Files'|manual_link }}
                     {{ _('file')|button(url_for('file_insert')) }}
                     {{ _('list')|button(url_for('file_index')) }}
+                    {% if 'manager'|is_authorized %}
+                        {{  _('edit settings')|button(url_for('admin_file')) }}
+                    {% endif %}
                 </div>
                 {% for dir, value in writeable_dirs.items() %}
                     {% if not value %}
@@ -53,25 +66,8 @@
                         </p>
                     {% endif %}
                 {% endfor %}
-                {% if disk_space_info %}
-                    <div id="disk-size"></div>
-                    <p>
-                        {{ _('total disk space')|uc_first }} <strong>{{ disk_space_info.total }}</strong> -
-                        {{ _('free disk space')|uc_first }} <strong>{{ disk_space_info.free }}</strong>
-                    </p>
-                    <script>
-                        $( function() {
-                            $("#disk-size").progressbar({value: {{ disk_space_info.percent }} });
-                        });
-                    </script>
-                {% endif %}
                 <div>
                     {{ settings.file|display_info }}
-                    {% if 'manager'|is_authorized %}
-                        <div class="toolbar">
-                            {{  _('edit')|button(url_for('admin_file')) }}
-                        </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
