--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -12,6 +12,7 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-files">{{ _('files')|uc_first }}</a></li>
             {% if 'manager'|is_authorized %}
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-map">{{ _('map')|uc_first }}</a></li>
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-content">{{ _('content')|uc_first }}</a></li>
             {% endif %}
             {% if 'admin'|is_authorized %}
                 <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-mail">{{ _('email')|uc_first }}</a></li>
@@ -54,7 +55,7 @@
                     {% endif %}
                 </div>
                 <div>
-                    {{ table.display()|safe }}
+                    {{ tables.user.display('user')|safe }}
                 </div>
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-files">
@@ -77,6 +78,25 @@
                     {{ info.file|display_info }}
                 </div>
             </div>
+            {% if 'manager'|is_authorized %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-map">
+                    <div class="toolbar">
+                        {{ 'Map'|manual_link }}
+                        {{ _('edit settings')|button(url_for('admin_map')) }}
+                    </div>
+                    <div>
+                        {{ info.map|display_info }}
+                    </div>
+                </div>
+                <div class="tab-pane fade" role="tabpanel" id="tab-content">
+                    <div class="toolbar">
+                        {{ 'Content'|manual_link }}
+                    </div>
+                    <div>
+                        {{ tables.content.display('content')|safe }}
+                    </div>
+                </div>
+            {% endif %}
             {% if 'admin'|is_authorized %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-mail">
                     <div class="toolbar">
@@ -91,17 +111,6 @@
                     {% endif %}
                 </div>
             {% endif  %}
-            {% if 'manager'|is_authorized %}
-                <div class="tab-pane fade" role="tabpanel" id="tab-map">
-                    <div class="toolbar">
-                        {{ 'Map'|manual_link }}
-                        {{ _('edit settings')|button(url_for('admin_map')) }}
-                    </div>
-                    <div>
-                        {{ info.map|display_info }}
-                    </div>
-                </div>
-            {% endif %}
         </div>
     </div>
 </div>
@@ -110,7 +119,6 @@
     <div id="admin_index" style="margin-top:2em;">
 
         {% if 'manager'|is_authorized %}
-            <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
             <a href="{{ url_for('admin_logo') }}">{{ _('logo')|uc_first }}</a>
         {% endif %}
         <h1>{{ _('logs')|uc_first }}</h1>
