--- a/openatlas/templates/admin/check_dates.html
+++ b/openatlas/templates/admin/check_dates.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('admin')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('check dates')]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('check dates')|uc_first }}
 {% endblock %}
 {% block content %}
-{{ 'Data_integrity'|manual_link }}
 <div id="tabs" class="tabs-container">
+    {{ 'Data_integrity'|manual_link }}
     <ul>
         <li><a href="#tab-dates">{{ _('invalid dates')|uc_first }} {{ tables['dates']|format_tab_number }}</a></li>
         <li><a href="#tab-link-dates">{{ _('invalid link dates')|uc_first }} {{ tables['link_dates']|format_tab_number }}</a></li>
