--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -103,7 +103,7 @@
             {% endif %}
             {% if 'contributor'|is_authorized %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-data">
-                    <h1>{{ _('data integrity')|uc_first }}</h1>
+                    <h1>{{ _('data integrity checks')|uc_first }}</h1>
                     <div class="toolbar">
                         {{ _('orphans')|button(url_for('admin_orphans')) }}
                         {{ _('links')|button(url_for('admin_check_links')) }}
